docker/kuber/web-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-service-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-service-app
  template:
    metadata:
      labels:
        app: web-service-app

    spec:
      containers:
        - name: web-service-app-container
          image: task-2-web-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8001
              protocol: TCP
