docker/kuber/web-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service-app-service
spec:
  type: ClusterIP
  ports:
    - port: 8001
  selector:
    app: web-service-app
